--- a/All-In-One Bot/package.json
+++ b/All-In-One Bot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "all-in-one-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "The All-In-One Bot",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "telegraf": "^4.12.0",
     "telegraf-i18n": "^6.6.0"
