--- a/All-In-One Bot/package.json
+++ b/All-In-One Bot/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "telegraf": "^4.12.0",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.0",
+    "telegraf": "^4.12.2",
     "telegraf-i18n": "^6.6.0"
   },
   "devDependencies": {
