--- a/All-In-One Bot/package.json
+++ b/All-In-One Bot/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cron": "^2.4.0",
     "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
