--- a/All-In-One Bot/package.json
+++ b/All-In-One Bot/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
     "telegraf": "^4.12.2",
-    "telegraf-i18n": "^6.6.0"
+    "telegraf-i18n": "^6.6.0",
+    "telegraf-ratelimit": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
