docs: update package.json

--- a/All-In-One-Bot/package.json
+++ b/All-In-One-Bot/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "build": "npm install --force"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
