--- a/All-In-One-Bot/package.json
+++ b/All-In-One-Bot/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "cron": "^2.4.0",
     "dotenv": "^16.3.1",
     "module-alias": "^2.2.3",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
+    "node-cron": "^3.0.2",
     "telegraf": "^4.12.2",
     "telegraf-ratelimit": "^2.0.0"
   },
